--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <br>
             <div>
                 <h1> Hey I am </h1>
-                <h1>Akareut <span style="color: yellowgreen;">Francisca</span> </h1>
+                <h1>Akareut <span style="color: orangered;">Francisca</span> </h1>
                 <p> I am a new Software developer learning html and CSS.</p>
                 <p> I  recently joined KazuCode Foundation for the Cohort Boot camp to perfect my skills.</p>
                 <p>I am a very passionate person,highly organised and self driven person.</p> 
@@ -43,20 +43,21 @@
             </div>
             
         </div>
+        <p> These are some of the projects I have worked  on</p> 
         <div id="projects-section">
-            <h1 id="paragraph">These are some of the projects I have worked  on</h1><br>
+            
             <div class="project-tile">Survey Form
             <p>This is a survey form</p>
-            <img src="./images/survey form.jpg" alt="This is an image of a Survey form" width="300px" height="300px"> 
+            <img src="./images/survey form.jpg" alt="This is an image of a Survey form" width="400px" height="400px"> 
             <a href="https://survey-form-francesca.netlify.app/" blank="target">Learn more</a>
             </div>
             <div id="calculator">Calculator
             <p>This is an image of a calculator</p>
-            <img src="./images/calculator.jpg" alt="This is an image of a calculator" width="300px" height="300px">
+            <img src="./images/calculator.jpg" alt="This is an image of a calculator" width="400px" height="400px">
             </div>
             <div id="color">
             <p>This is a Sign up form</p>
-            <img src="./images/signup form.jpg" alt="This an image of a sign up form" width="300px" height="300px">
+            <img src="./images/signup form.jpg" alt="This an image of a sign up form" width="400px" height="400px">
             <a href="file:///C:/Users/admin/Desktop/CSS%20FORM%20DEMO/form.html">Click here</a>
             </div>
 
