modified the index and css files

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
                 <h1> Hey I am </h1>
                 <h1>Akareut <span style="color: orangered;">Francisca</span> </h1>
                 <p> I am a new Software developer learning html and CSS.</p>
-                <p> I  recently joined KazuCode Foundation for the Cohort Boot camp to perfect my skills.</p>
-                <p>I am a very passionate person,highly organised and self driven person.</p> 
-                <p> I love taking on new challenges and thankful to Kanzu Code.</p> 
+                <p> I  recently<span style="color: blueviolet;">KazuCode Foundation </span> joined for the Cohort Boot camp to perfect my skills.</p>
+                <p>I love to work with inspiring and creative agencies and people.</p> 
+                <p> I am a freelance web application developer.</p> 
                     
                 </p>
             </div>
