modify index and css files

--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
                 <h3>Survey Form</h3>
                 <a href="https://survey-form-francesca.netlify.app/" blank="target">Learn more</a>
                 </div>
-                <div id="calculator">
+                <div class="project-tile">
                 
                 <img src="./images/calculator.jpg" alt="This is an image of a calculator" width="400px" height="400px">
                 <h3>Calculator</h3>
                 </div>
-                <div id="color">
+                <div class="project-tile">
                 
                 <img src="./images/signup form.jpg" alt="This an image of a sign up form" width="400px" height="400px">
                 <h3>Signup Form</h3>
