--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
             <br>
             <div class="container">
                 <h1> Hey I am </h1>
-                <h1>Akareut <span style="color: orangered;">Francisca</span> </h1>
+                <h1>Akareut <span>Francisca</span> </h1>
                 <p> I am a new Software developer learning html and CSS.</p>
-                <p> I  recently joined  <span style="color: blueviolet;">KazuCode Foundation </span> for the Cohort Boot camp to perfect my skills.</p>
+                <p> I  recently joined  <span>KanzuCode Foundation </span> for the Cohort Boot camp to perfect my skills.</p>
                 <p>I love to work with inspiring and creative organisations and people.</p> 
                 <p> I am a freelance web application developer.</p> 
                     
